--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>scooptity</h2>
+    <h2 style=" color: blue;">scooptity</h2>
     <h1>welcome!</h1>
     Hello, world!
 </body>
